@@ -1,3 +1,13 @@
+2015-08-25  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Convert/XSParagraph/configure.ac (AC_CONFIG_HEADERS),
+	tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
+	tp/Texinfo/Convert/XSParagraph/text.c,
+	tp/Texinfo/Convert/XSParagraph/xspara.c: 
+	Use xsparagraph_acconfig.h instead of config.h as the name for the
+	header file generated by configure as an additional security against 
+	using the config.h file in perl include directory.
+
 2015-08-25  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* doc/texinfo.tex (\sortas): Expand to \eatspaces, to remove a 
